Assignment3/bonus/nginx_three_secret_pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-username
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-username
  template:
    metadata:
      labels:
        app: nginx-username
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - name: db-creds
              mountPath: /usr/share/nginx/html/username
              readOnly: true
      volumes:
        - name: db-creds
          secret:
            secretName: db-creds-secret
            items:
              - key: username
                path: username
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-password
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-password
  template:
    metadata:
      labels:
        app: nginx-password
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - name: db-creds
              mountPath: /usr/share/nginx/html/password
              readOnly: true
      volumes:
        - name: db-creds
          secret:
            secretName: db-creds-secret
            items:
              - key: password
                path: password
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-url
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-url
  template:
    metadata:
      labels:
        app: nginx-url
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - name: db-creds
              mountPath: /usr/share/nginx/html/url
              readOnly: true
      volumes:
        - name: db-creds
          secret:
            secretName: db-creds-secret
            items:
              - key: database_url
                path: url
