Assignment3/bonus/nginx-three-secret-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-secret-username
spec:
  selector:
    app: nginx-username
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-secret-password
spec:
  selector:
    app: nginx-password
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-secret-url
spec:
  selector:
    app: nginx-url
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
