Assignment3/bonus/nginx_three_secret_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-three-secret-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mysql.services.com
    http:
      paths:
      - path: /username
        pathType: Prefix
        backend:
          service:
            name: nginx-secret-username
            port:
              name: http
      - path: /password
        pathType: Prefix
        backend:
          service:
            name: nginx-secret-password
            port:
              name: http
      - path: /url
        pathType: Prefix
        backend:
          service:
            name: nginx-secret-url
            port:
              name: http
